--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=5574
 spring.application.name=auth
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5438/bantads
+spring.datasource.url=jdbc:postgresql://localhost:5438/bantads
 spring.datasource.password=123
 spring.datasource.username=bantads
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 
-spring.rabbitmq.host=host.docker.internal
-spring.rabbitmq.port=5672
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5673
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
